caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/invalid_extendable_kind.caffeine
_base (Invalid): { vendor: String }

Blueprints
  "test" success_rate(x):
    Requiring { env: String }
    signals { value: "x" }
